--- a/ImageHoster/src/main/resources/templates/images/image.html
+++ b/ImageHoster/src/main/resources/templates/images/image.html
@@ -13,17 +13,17 @@
 
     <!-- You need to print the error message if the non owner of the image is trying to edit or delete the image-->
     <div class="dtc v-mid w-75 tr">
-        <a th:href="@{/editImage(imageId=${image.id})}">Edit</a>
+        <a th:href="@{/editImage(imageId=${image.id},userId = ${image.user.id},title = ${image.title})}">Edit</a>
         <!-- Show the edit error if the non owner of the image is trying to edit the image-->
         <!--Uncomment the below code to show the error if the non owner of the image is trying to edit the image-->
-        <!--<div th:if="${editError}">Only the owner of the image can edit the image</div>-->
+        <div th:if="${editError}">Only the owner of the image can edit the image</div>
         <div><br></div>
-        <form th:action="@{/deleteImage(imageId=${image.id})}" th:method="delete">
+        <form th:action="@{/deleteImage(imageId=${image.id},userId = ${image.user.id},title = ${image.title})}" th:method="delete">
             <input type="submit" value="Delete"/>
         </form>
         <!-- Show the delete error if the non owner of the image is trying to delete the image-->
         <!--Uncomment the below code to show the error if the non owner of the image is trying to delete the image-->
-        <!--<div th:if="${deleteError}">Only the owner of the image can delete the image</div>-->
+        <div th:if="${deleteError}">Only the owner of the image can delete the image</div>
     </div>
 </nav>
 
